rrdgraph rewrite started

--- a/wth_foundation/wth/trunk/mason/wthrrd.conf
+++ b/wth_foundation/wth/trunk/mason/wthrrd.conf
@@ -50,6 +50,15 @@ $testvariable = "calling rrd with mason";
         "--vertical-label" => "[% rel.hum.]",
         "--lower-limit"    => 0,
         "--width"          => 90,
+    },
+    Indoorsensor => {
+        "--start" => -86400,
+#        "--title"          => "barometric pressure",
+#        "--interlace" => undef,
+        "--imgformat"      => "PNG",
+#        "--vertical-label" => "[mbar]",
+#        "--lower-limit"    => 0,
+#        "--width"          => 90,
     }
 );
 
@@ -75,6 +84,13 @@ $testvariable = "calling rrd with mason";
         "GPRINT:humi:AVERAGE:Average %1.2lf",
         "GPRINT:humi:MAX:Maximum %1.2lf",
         "GPRINT:humi:MIN:Minimum %1.2lf\\n" 
+        ],
+    Pressure => [
+        "DEF:pressure=/proj/wetter/software/serial/wth/wth_foundation/wth/trunk/Indoorsensor.rrd:Pressure:AVERAGE",
+        "LINE2:pressure#00a000:Humidity",
+        "GPRINT:pressure:AVERAGE:Average %1.2lf",
+        "GPRINT:pressure:MAX:Maximum %1.2lf",
+        "GPRINT:pressure:MIN:Minimum %1.2lf\\n" 
         ],
 );
 
