--- a/wth_foundation/wth/trunk/mason/wthrrd.conf
+++ b/wth_foundation/wth/trunk/mason/wthrrd.conf
@@ -32,33 +32,36 @@ $testvariable = "calling rrd with mason";
         "--y-grid" => "5:2",
         "--units-exponent" => 0,
     },
-    TempI => {
-        "--start" => -86400,
-        "--title"          => "Indoor Temperature",
-#        "--interlaced"      => undef,
-        "--imgformat"      => "PNG",
-        "--vertical-label" => "[°C]",
-        "--lower-limit"    => 0,
-        "--width"          => 90,
-        "--x-grid"          => "HOUR:4:DAY:1:DAY:1:0:%A",
-    },
-    HumidityI => {
-        "--start" => -86400,
-        "--title"          => "Indoor Humidity",
-#        "--interlace" => undef,
-        "--imgformat"      => "PNG",
-        "--vertical-label" => "[% rel.hum.]",
-        "--lower-limit"    => 0,
-        "--width"          => 90,
-    },
     Indoorsensor => {
-        "--start" => -86400,
-#        "--title"          => "barometric pressure",
-#        "--interlace" => undef,
-        "--imgformat"      => "PNG",
-#        "--vertical-label" => "[mbar]",
-#        "--lower-limit"    => 0,
-#        "--width"          => 90,
+        Pressure => {
+          "--start" => -86400,
+          "--title"          => "Barometric Pressure",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[mbar]",
+          "--lower-limit"    => 980,
+          "--upper-limit"    => 1020,
+          "--width"          => 90,
+          "--y-grid"         => "5:4",
+          "--units-exponent" => 0
+        },
+        Temperature => {
+          "--start" => -86400,
+          "--title"          => "Temperature",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[°C]",
+          "--lower-limit"    => 0,
+          "--width"          => 90,
+        "--y-grid" => "5:2",
+        "--units-exponent" => 0,
+        },
+        Humidity => {
+          "--start" => -86400,
+          "--title"          => "Humidity",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[% rel.hum.]",
+          "--lower-limit"    => 0,
+          "--width"          => 90,
+        }
     }
 );
 
@@ -87,11 +90,11 @@ $testvariable = "calling rrd with mason";
         ],
     Pressure => [
         "DEF:pressure=/proj/wetter/software/serial/wth/wth_foundation/wth/trunk/Indoorsensor.rrd:Pressure:AVERAGE",
-        "LINE2:pressure#00a000:Humidity",
+        "LINE2:pressure#00a000:Pressure",
         "GPRINT:pressure:AVERAGE:Average %1.2lf",
         "GPRINT:pressure:MAX:Maximum %1.2lf",
         "GPRINT:pressure:MIN:Minimum %1.2lf\\n" 
-        ],
+        ]
 );
 
 %extraopts = (
