--- a/wth_foundation/wth/trunk/Makefile.am
+++ b/wth_foundation/wth/trunk/Makefile.am
@@ -1,9 +1,9 @@
-bin_PROGRAMS = wthnewpd
+bin_PROGRAMS = wthd
 
-wthnewpd_SOURCES = wthnew.h wthnewpd.c utilnew.c \
-  pcwsr.c ws2000.c netnew.c \
+wthd_SOURCES = wth.h wthd.c util.c \
+  pcwsr.c ws2000.c net.c \
   wthdb.c
-wthnewpd_LDADD = -L/usr/local/lib -lpthread -lsqlite3 -lrrd_th
+wthd_LDADD = -L/usr/local/lib -lpthread -lsqlite3 -lrrd_th
 
-noinst_HEADERS = wthnew.h 
+noinst_HEADERS = wth.h 
 
