--- a/wth_foundation/wth/trunk/configure.in
+++ b/wth_foundation/wth/trunk/configure.in
@@ -40,7 +40,7 @@ AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(fcntl.h strings.h sys/ioctl.h syslog.h unistd.h)
 AC_CHECK_HEADERS(sqlite3.h, , AC_MSG_ERROR(sqlite3 headers not found. Please install first.), )
-AC_CHECK_HEADERS(pthreads.h, , AC_MSG_ERROR(pthreads headers not found. Please install first.), )
+AC_CHECK_HEADERS(pthread.h, , AC_MSG_ERROR(pthread headers not found. Please install first.), )
 
 
 dnl Checks for typedefs, structures, and compiler characteristics.
