--- a/wth_foundation/wth/trunk/config.h.in
+++ b/wth_foundation/wth/trunk/config.h.in
@@ -1,4 +1,15 @@
 /* config.h.in.  Generated from configure.in by autoheader.  */
+/* wth */
+#undef PACKAGE
+
+/* 0.4.2 */
+#undef VERSION
+
+/* Enable GNU extensions */
+#define _GNU_SOURCE
+
+/* CPU_VENDOR_OS */
+#undef CPU_VENDOR_OS
 
 /* Define to 1 if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
