source cleanup ethd

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -57,7 +57,7 @@ am_wthd_OBJECTS = wthd.$(OBJEXT) util.$(OBJEXT) pcwsr.$(OBJEXT) \
 	ws2000.$(OBJEXT) net.$(OBJEXT) wthdb.$(OBJEXT)
 wthd_OBJECTS = $(am_wthd_OBJECTS)
 wthd_DEPENDENCIES =
-DEFAULT_INCLUDES = -I.
+DEFAULT_INCLUDES = -I.@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
@@ -80,11 +80,11 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run aclocal-1.10
+ACLOCAL = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run aclocal-1.9
 AMTAR = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run tar
 AUTOCONF = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run autoconf
 AUTOHEADER = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run autoheader
-AUTOMAKE = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run automake-1.10
+AUTOMAKE = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -97,20 +97,20 @@ DEPDIR = .deps
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = /usr/bin/grep -E
+EGREP = grep -E
 EXEEXT = 
-GREP = /usr/bin/grep
+GREP = @GREP@
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
-INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
+INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
 LDFLAGS = 
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
 MAKEINFO = ${SHELL} /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/missing --run makeinfo
-MKDIR_P = ./install-sh -c -d
+MKDIR_P = @MKDIR_P@
 OBJEXT = o
 PACKAGE = wth
 PACKAGE_BUGREPORT = 
@@ -121,7 +121,7 @@ PACKAGE_VERSION =
 PATH_SEPARATOR = :
 RANLIB = ranlib
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 STRIP = 
 VERSION = 0.5.0
 abs_builddir = /proj/wetter/software/serial/wth/wth_foundation/wth/trunk
@@ -141,31 +141,31 @@ build_cpu = i386
 build_os = freebsd6.2
 build_vendor = unknown
 builddir = .
-datadir = ${datarootdir}
-datarootdir = ${prefix}/share
-docdir = ${datarootdir}/doc/${PACKAGE}
-dvidir = ${docdir}
+datadir = ${prefix}/share
+datarootdir = @datarootdir@
+docdir = @docdir@
+dvidir = @dvidir@
 exec_prefix = ${prefix}
 host = i386-unknown-freebsd6.2
 host_alias = 
 host_cpu = i386
 host_os = freebsd6.2
 host_vendor = unknown
-htmldir = ${docdir}
+htmldir = @htmldir@
 includedir = ${prefix}/include
-infodir = ${datarootdir}/info
-install_sh = $(SHELL) /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/install-sh
+infodir = ${prefix}/info
+install_sh = /proj/wetter/software/serial/wth/wth_foundation/wth/trunk/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
-localedir = ${datarootdir}/locale
+localedir = @localedir@
 localstatedir = ${prefix}/var
-mandir = ${datarootdir}/man
-mkdir_p = $(top_builddir)/./install-sh -c -d
+mandir = ${prefix}/man
+mkdir_p = $(mkinstalldirs)
 oldincludedir = /usr/include
-pdfdir = ${docdir}
+pdfdir = @pdfdir@
 prefix = /usr/local
 program_transform_name = s,x,x,
-psdir = ${docdir}
+psdir = @psdir@
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 srcdir = .
@@ -175,7 +175,7 @@ target_alias =
 target_cpu = i386
 target_os = freebsd6.2
 target_vendor = unknown
-top_builddir = .
+top_builddir = 
 top_srcdir = .
 wthd_SOURCES = wth.h wthd.c util.c \
   pcwsr.c ws2000.c net.c \
