--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -8,7 +8,7 @@ objects = wthd.o ws2000.o pcwsr.o util.o wthdb.o net.o
 $(objects): %.o: %.c
 	$(CC) -I. -I/usr/local/include -I/usr/include $(CFLAGS) -c $< -o $@
 
-wthd : $(objects)
+wthd : $(objects) wth.h
 	cc -L/usr/local/lib -lpthread -lsqlite3 -lrrd_th -o wthd $(objects)
 
 clean:
