rrdfile in config file

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -3,13 +3,15 @@
 # 
 # Volker Jahns, volker@thalreit.de
 #
-objects = wthd.o ws2000.o pcwsr.o util.o wthdb.o net.o
+objects = wthd.o ws2000.o pcwsr.o util.o net.o
 
+wthdb.o:
+	$(CC) -I. -I/usr/local/include -I/usr/include $(CFLAGS) -c wthdb.c
 $(objects): %.o: %.c
 	$(CC) -I. -I/usr/local/include -I/usr/include $(CFLAGS) -c $< -o $@
 
-wthd : $(objects) wth.h
-	cc -L/usr/local/lib -lpthread -lsqlite3 -lrrd_th -o wthd $(objects)
+wthd : $(objects) wthdb.o wth.h
+	cc -L/usr/local/lib -lpthread -lsqlite3 -lrrd_th -o wthd $(objects) wthdb.o
 
 clean:
 	rm -fr *.o *~
