bug reading correct location of ws2000.db

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -5,8 +5,9 @@
 #
 objects = wthd.o ws2000.o pcwsr.o util.o net.o
 
-wthdb.o:
+wthdb.o: wthdb.c
 	$(CC) -I. -I/usr/local/include -I/usr/include $(CFLAGS) -c wthdb.c
+
 $(objects): %.o: %.c
 	$(CC) -I. -I/usr/local/include -I/usr/include $(CFLAGS) -c $< -o $@
 
