rrdproc updated to include graphical output of rrd

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -1,29 +1,9 @@
 #
 # configuration file for rrdproc
 #
-my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1 
+$DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1 
 
 %extraopts = (
-    PressureI => {
-        rrdfile => "PressureI.rrd",
-        imgfile => "PressureI.png",
-    },
-    TempI => {
-        rrdfile => "TempI.rrd",
-        imgfile => "TempI.png",
-    },
-    Outdoor16 => {
-        rrdfile => "Outdoor16.rrd",
-        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
-    },
-    Outdoor18 => {
-        rrdfile => "Outdoor18.rrd",
-        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
-    },
-    Outdoor28 => {
-        rrdfile => "Outdoor28.rrd",
-        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
-    },
     Sensor1 => {
         rrdfile => "Sensor1.rrd",
         imgfile => [ "Temp1.png", "Hum1.png" ]
@@ -45,16 +25,8 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
         imgfile => [ "Windspeed.png", "Winddirection.png" , "Windvaration.png" ]
     },
     Indoorsensor => {
-        rrdfile => "Indoorsensor.rrd",
-        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
-    },
-    Indoor71 => {
-        rrdfile => "Indoor71.rrd",
-        imgfile => [ "TempI.png", "HumI.png" , "PressureI.png" ]
-    },
-    Rain39 => {
-        rrdfile => "Rain39.rrd",
-        imgfile => [ "Rain39.png" ]
+        rrdfile => "/proj/wetter/logs/Indoorsensor.rrd",
+        imgfile => [ "Test.png" ]
     }
 );
 
@@ -204,97 +176,73 @@ my $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
 );
 
 %graphopts = (
-    PressureI => {
-        "--start" => -86400,
-        "--title", "Atmospheric Pressure",
-#        "--interlace" => undef,
-        "--imgformat" => "PNG",
-        "--vertical-label" => "[mbar]",
-        "--lower-limit" => 980,
-        "--upper-limit" => 1020,
-        "--width" => 90,
-        "--y-grid" => "5:2",
-        "--units-exponent" => 0,
-    },
-    TempI => {
-        "--start" => -86400,
-        "--title"          => "Indoor Temperature",
-#        "--interlaced"      => undef,
-        "--imgformat"      => "PNG",
-        "--vertical-label" => "[C]",
-        "--lower-limit"    => 0,
-        "--width"          => 90,
-        "--x-grid"          => "HOUR:4:DAY:1:DAY:1:0:%A",
-    },
-    HumidityI => {
-        "--start" => -86400,
-        "--title"          => "Indoor Humidity",
-#        "--interlace" => undef,
-        "--imgformat"      => "PNG",
-        "--vertical-label" => "[% rel.hum.]",
-        "--lower-limit"    => 0,
-        "--width"          => 90,
-    },
-    Temp1 => {
-        "--start" => -86400,
-        "--title"          => "Temperature Sensor 1",
-#        "--interlaced"      => undef,
-        "--imgformat"      => "PNG",
-        "--vertical-label" => "[C]",
-        "--lower-limit"    => 0,
-        "--width"          => 90,
-        "--x-grid"          => "HOUR:4:DAY:1:DAY:1:0:%A",
-    },
-    Hum1 => {
-        "--start" => -86400,
-        "--title"          => "Humidity Sensor 1",
-#        "--interlace" => undef,
-        "--imgformat"      => "PNG",
-        "--vertical-label" => "[% rel.hum.]",
-        "--lower-limit"    => 0,
-        "--width"          => 90,
+    Indoorsensor => {
+        Pressure => {
+          "--start" => -86400,
+          "--title"          => "Barometric Pressure",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[mbar]",
+          "--lower-limit"    => 980,
+          "--upper-limit"    => 1020,
+          "--width"          => 90,
+          "--y-grid"         => "5:4",
+          "--units-exponent" => 0
+        },
+        Temperature => {
+          "--start" => -86400,
+          "--title"          => "Temperature",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[<B0>C]",
+          "--lower-limit"    => 0,
+          "--width"          => 90,
+          "--y-grid" => "5:2",
+          "--units-exponent" => 0,
+          graphdefs => [
+               "DEF:Temperature=/proj/wetter/logs/Indoorsensor.rrd:Temperature:AVERAGE",
+               "LINE2:Temperature#00a000:Temperature",
+               "GPRINT:Temperature:AVERAGE:Average %1.2lf\\n"
+          ]
+        },
+        Humidity => {
+          "--start" => -86400,
+          "--title"          => "Humidity",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[% rel.hum.]",
+          "--lower-limit"    => 0,
+          "--width"          => 90,
+          graphdefs => [
+               "DEF:Humidity=/proj/wetter/logs/Indoorsensor.rrd:Humidity:AVERAGE",
+               "LINE2:Humidity#00a000:Humidity",
+               "GPRINT:Humidity:AVERAGE:Average %1.2lf\\n"
+          ]
+        }
     }
 );
 
 %graphdefs = (
-     PressureI => [
-        "DEF:pressure=/proj/wetter/logs/sens20.rrd:press:AVERAGE",
-        "CDEF:nnpress=1.055615,pressure,*",
-        "LINE2:nnpress#00a000:Pressure",
-        "GPRINT:nnpress:AVERAGE:Average %1.2lf",
-        "GPRINT:nnpress:MAX:Maximum %1.2lf",
-        "GPRINT:nnpress:MIN:Minimum %1.2lf"
-        ],
-    TempI     => [
-        "DEF:tempi=/proj/wetter/logs/sens21.rrd:tempi:AVERAGE",
-        "LINE2:tempi#00a000:Temperature",
-        "GPRINT:tempi:AVERAGE:Average %1.2lf",
-        "GPRINT:tempi:MAX:Maximum %1.2lf",
-        "GPRINT:tempi:MIN:Minimum %1.2lf\\n"
-        ],
-    HumidityI => [
-        "DEF:humi=/proj/wetter/logs/sens22.rrd:humi:AVERAGE",
-        "LINE2:humi#00a000:Humidity",
-        "GPRINT:humi:AVERAGE:Average %1.2lf",
-        "GPRINT:humi:MAX:Maximum %1.2lf",
-        "GPRINT:humi:MIN:Minimum %1.2lf\\n"
-        ],
-    Temp1     => [
-        "DEF:Temperature=Sensor1.rrd:Temperature:AVERAGE",
+    Temperature => [
+        "DEF:Temperature=/proj/wetter/logs/Indoorsensor.rrd:Temperature:AVERAGE",
         "LINE2:Temperature#00a000:Temperature",
-        "GPRINT:Temperature:AVERAGE:Average %1.2lf",
-        "GPRINT:Temperature:MAX:Maximum %1.2lf",
-        "GPRINT:Temperature:MIN:Minimum %1.2lf\\n"
+        "GPRINT:Temperature:AVERAGE:Average %1.2lf\\n"
         ],
-    Hum1 => [
-        "DEF:Humidity=Sensor1.rrd:humi:AVERAGE",
+    Humidity => [
+        "DEF:Humidity=/proj/wetter/logs/Indoorsensor.rrd:Humidity:AVERAGE",
         "LINE2:Humidity#00a000:Humidity",
-        "GPRINT:Humidity:AVERAGE:Average %1.2lf",
-        "GPRINT:Humidity:MAX:Maximum %1.2lf",
-        "GPRINT:Humidity:MIN:Minimum %1.2lf\\n"
+        "GPRINT:Humidity:AVERAGE:Average %1.2lf\\n"
+        ],
+    Pressure => [
+        "DEF:Pressure=/proj/wetter/logs/Indoorsensor.rrd:Pressure:AVERAGE",
+        "CDEF:NNPressure=1.055615,Pressure,*",
+        "LINE2:Pressure#00a000:Pressure",
+        "GPRINT:Pressure:AVERAGE:Average %1.2lf\\n"
+        ],
+    Windspeed => [
+        "DEF:Windspeed=/proj/wetter/logs/Windsensor.rrd:Windspeed:AVERAGE",
+        "LINE2:Windspeed#00a000:Windspeed",
+        "GPRINT:Windspeed:AVERAGE:Average %1.2lf\\n"
         ]
 );
 
-
-@Sensors = ( "Sensor1", "Sensor3", "Sensor5", 
-             "Rainsensor", "Windsensor", "Indoorsensor" );
+@Sensors    = ( "Indoorsensor", "Windsensor" );
+#@Sensors    = ( "Indoorsensor" );
+#@Datasource = ( "Temperature", "Pressure", "Humidity", "Windspeed" );
