rrdproc graphical output error fioxed

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -186,7 +186,13 @@ $DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1
           "--upper-limit"    => 1020,
           "--width"          => 90,
           "--y-grid"         => "5:4",
-          "--units-exponent" => 0
+          "--units-exponent" => 0,
+          graphdefs => [
+               "DEF:Pressure=/proj/wetter/logs/Indoorsensor.rrd:Pressure:AVERAGE",
+               "CDEF:NNPressure=1.055615,Pressure,*",
+               "LINE2:Pressure#00a000:Pressure",
+               "GPRINT:Pressure:AVERAGE:Average %1.2lf\\n"
+          ]
         },
         Temperature => {
           "--start" => -86400,
