rrdproc fetch options fixed

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -1,32 +1,26 @@
 #
 # configuration file for rrdproc
 #
-$DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1 
+#$DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1 
 
 %extraopts = (
     Sensor1 => {
-        rrdfile => "Sensor1.rrd",
-        imgfile => [ "Temp1.png", "Hum1.png" ]
+        rrdfile => "/proj/wetter/logs/Sensor1.rrd"
     },
     Sensor3 => {
-        rrdfile => "Sensor3.rrd",
-        imgfile => [ "Temp3.png", "Hum3.png"  ]
+        rrdfile => "/proj/wetter/logs/Sensor3.rrd"
     },
     Sensor5 => {
-        rrdfile => "Sensor5.rrd",
-        imgfile => [ "Temp5.png", "Hum5.png"  ]
+        rrdfile => "/proj/wetter/logs/Sensor5.rrd"
     },
     Rainsensor => {
-        rrdfile => "Rainsensor.rrd",
-        imgfile => [ "Rain.png" ]
+        rrdfile => "/proj/wetter/logs/Rainsensor.rrd"
     },
     Windsensor => {
-        rrdfile => "Windsensor.rrd",
-        imgfile => [ "Windspeed.png", "Winddirection.png" , "Windvaration.png" ]
+        rrdfile => "/proj/wetter/logs/Windsensor.rrd"
     },
     Indoorsensor => {
-        rrdfile => "/proj/wetter/logs/Indoorsensor.rrd",
-        imgfile => [ "Test.png" ]
+        rrdfile => "/proj/wetter/logs/Indoorsensor.rrd"
     }
 );
 
