rrdproc clean graph output

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -1,7 +1,8 @@
 #
 # configuration file for rrdproc
 #
-#$DEBUG = 1; # set $DEBUG = 1, or set environment variable DEBUG=1 
+# for debugging pruposes set $DEBUG = 1, or set environment variable DEBUG=1 
+$DEBUG = 0; 
 
 %extraopts = (
     Sensor1 => {
