rrdproc garph and fetch debugged

--- a/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
+++ b/wth_foundation/wth/trunk/rrdtool/rrdproc.conf
@@ -193,7 +193,7 @@ $DEBUG = 0;
           "--start" => -86400,
           "--title"          => "Temperature",
           "--imgformat"      => "PNG",
-          "--vertical-label" => "[<B0>C]",
+          "--vertical-label" => "[deg Celsius]",
           "--lower-limit"    => 0,
           "--width"          => 90,
           "--y-grid" => "5:2",
@@ -217,33 +217,73 @@ $DEBUG = 0;
                "GPRINT:Humidity:AVERAGE:Average %1.2lf\\n"
           ]
         }
+    },
+    Windsensor => {
+        Winddirection => {
+          "--start" => -86400,
+          "--title"          => "Winddirection",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[deg]",
+          "--lower-limit"    => 0,
+          "--upper-limit"    => 360,
+          "--width"          => 90,
+          "--y-grid"         => "5:4",
+          "--units-exponent" => 0,
+          graphdefs => [
+               "DEF:Winddirection=/proj/wetter/logs/Windsensor.rrd:Winddirection:AVERAGE",
+               "LINE2:Winddirection#00a000:Winddirection",
+               "GPRINT:Winddirection:AVERAGE:Average %1.2lf\\n"
+          ]
+        },
+        Windspeed => {
+          "--start" => -86400,
+          "--title"          => "Windspeed",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[km/h]",
+          "--lower-limit"    => 0,
+          "--width"          => 90,
+          "--y-grid" => "5:2",
+          "--units-exponent" => 0,
+          graphdefs => [
+               "DEF:Windspeed=/proj/wetter/logs/Windsensor.rrd:Windspeed:AVERAGE",
+               "LINE2:Windspeed#00a000:Windspeed",
+               "GPRINT:Windspeed:AVERAGE:Average %1.2lf\\n"
+          ]
+        },
+        Windvariation => {
+          "--start" => -86400,
+          "--title"          => "Windvariation",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[deg]",
+          "--lower-limit"    => 0,
+          "--width"          => 90,
+          graphdefs => [
+               "DEF:Windvariation=/proj/wetter/logs/Windsensor.rrd:Windvariation:AVERAGE",
+               "LINE2:Windvariation#00a000:Windvariation",
+               "GPRINT:Windvariation:AVERAGE:Average %1.2lf\\n"
+          ]
+        }
+    },
+    Rainsensor => {
+        Rainfall => {
+          "--start" => -86400,
+          "--title"          => "Rainfall",
+          "--imgformat"      => "PNG",
+          "--vertical-label" => "[mm]",
+          "--lower-limit"    => 0,
+          "--upper-limit"    => 360,
+          "--width"          => 90,
+          "--y-grid"         => "5:4",
+          "--units-exponent" => 0,
+          graphdefs => [
+               "DEF:Rainfall=/proj/wetter/logs/Rainsensor.rrd:Rainfall:AVERAGE",
+               "LINE2:Rainfall#00a000:Rainfall",
+               "GPRINT:Rainfall:AVERAGE:Average %1.2lf\\n"
+          ]
+        }
     }
 );
 
-%graphdefs = (
-    Temperature => [
-        "DEF:Temperature=/proj/wetter/logs/Indoorsensor.rrd:Temperature:AVERAGE",
-        "LINE2:Temperature#00a000:Temperature",
-        "GPRINT:Temperature:AVERAGE:Average %1.2lf\\n"
-        ],
-    Humidity => [
-        "DEF:Humidity=/proj/wetter/logs/Indoorsensor.rrd:Humidity:AVERAGE",
-        "LINE2:Humidity#00a000:Humidity",
-        "GPRINT:Humidity:AVERAGE:Average %1.2lf\\n"
-        ],
-    Pressure => [
-        "DEF:Pressure=/proj/wetter/logs/Indoorsensor.rrd:Pressure:AVERAGE",
-        "CDEF:NNPressure=1.055615,Pressure,*",
-        "LINE2:Pressure#00a000:Pressure",
-        "GPRINT:Pressure:AVERAGE:Average %1.2lf\\n"
-        ],
-    Windspeed => [
-        "DEF:Windspeed=/proj/wetter/logs/Windsensor.rrd:Windspeed:AVERAGE",
-        "LINE2:Windspeed#00a000:Windspeed",
-        "GPRINT:Windspeed:AVERAGE:Average %1.2lf\\n"
-        ]
-);
 
-@Sensors    = ( "Indoorsensor", "Windsensor" );
+@Sensors    = ( "Indoorsensor", "Windsensor", "Rainsensor" );
 #@Sensors    = ( "Indoorsensor" );
-#@Datasource = ( "Temperature", "Pressure", "Humidity", "Windspeed" );
