segmentation fault on FreeBSD 7.0 fixed in echodata, wcmd

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -16,20 +16,26 @@ OBJDIR  = build_$(ARCH)
 SRCS    = wthd.c ws2000.c pcwsr.c util.c net.c cmd.c wthdb.c
 OBJS    = $(patsubst %c, $(OBJDIR)/%o, $(SRCS))
 WTHAPP  = $(OBJDIR)/wthd
-$(info $(OBJS))
+#$(info $(OBJS))
 
 CFLAGS  = -Wall
 CC = gcc
 
 ifneq (,$(findstring Darwin,$(ARCH)))
-  $(info This is Darwin)
+  #$(info This is Darwin)
   include_flags = -I./src -I/usr/local/include -I/opt/local/include -I/usr/include
   ld_flags = -L/usr/local/lib -L/opt/local/lib -lpthread -lrrd_th 
 endif
 
 ifneq (,$(findstring FreeBSD,$(ARCH)))
-  $(info This is FreeBSD)
+  #$(info This is FreeBSD)
   include_flags = -I./src -I/usr/local/include -I/usr/include
+  ld_flags = -L/usr/local/lib -lpthread -lrrd_th -lsqlite3
+endif
+
+ifneq (,$(findstring Linux,$(ARCH)))
+  #$(info This is Linux)
+  include_flags = -I./src -I/usr/include
   ld_flags = -L/usr/local/lib -lpthread -lrrd_th -lsqlite3
 endif
 
