sqlite3 memory leak closed. moved sqlite3_open to subroutines

--- a/wth_foundation/wth/trunk/Makefile
+++ b/wth_foundation/wth/trunk/Makefile
@@ -19,7 +19,7 @@ WTHAPP  = $(OBJDIR)/wthd
 #$(info $(OBJS))
 
 CFLAGS  = -Wall
-CC = gcc
+CC = gcc34
 
 ifneq (,$(findstring Darwin,$(ARCH)))
   #$(info This is Darwin)
